--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "assets/fonts/manrope"]
 	path = assets/fonts/manrope
-	url = git@github.com:sharanda/manrope.git
+	url = https://github.com/sharanda/manrope.git
