--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "@types/react": "^16.8.19",
     "@types/react-native": "^0.57.60",
     "babel-preset-expo": "^5.1.1",
-    "typescript": "^3.4.5",
-    "expo-cli": "^2.20.2"
+    "typescript": "^3.4.5"
   },
   "private": true
 }
