add primary color key

--- a/app.json
+++ b/app.json
@@ -15,6 +15,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#110E0F"
     },
+    "primaryColor": "#110E0F",
     "updates": {
       "fallbackToCacheTimeout": 0
     },
