--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "build:web": "expo build:web",
-    "deploy": "netlify deploy --prod",
+    "deploy": "netlify deploy",
     "eject": "expo eject"
   },
   "dependencies": {
